--- a/src/Components/Banners/EmailBanner.css
+++ b/src/Components/Banners/EmailBanner.css
@@ -26,7 +26,7 @@
   padding: 10px 10px;
   right: 21px;
   bottom: 21px;
-  border: 2px solid #000;
+  border: 2px solid var(--primary-color);
   border-radius: 0 6px 6px 0;
   cursor: pointer;
 }
