--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -103,7 +103,7 @@
   /* nav left  */
   .left {
     align-self: flex-start;
-    margin-top: 10px;
+    margin-top: 16px;
   }
 
   /* nav right */
@@ -112,7 +112,7 @@
   }
   .navbar-ul li {
     padding: 0;
-    margin: 0.5rem;
+    margin: 0.8rem 0.5rem;
   }
   .login {
     margin-top: 16px;
